Twitter bootstrap added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Pagination Widget</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 	<script type="text/javascript" src="vendor/jquery.min.js"></script>
 	<script type="text/javascript" src="vendor/jquery.ui.widget.min.js"></script>
 	<script type="text/javascript" src="lib/jquery.w.pagination.js"></script>
